Name:             salvia-extras
Version:          1.2.0
Description:      Collection of non-fundamental handlers for the Salvia web server.
Synopsis:         Collection of non-fundamental handlers for the Salvia web server.
Category:         Network, Web
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       haskell@fvisser.nl
Cabal-version:    >= 1.6
Build-Type:       Simple

Library
  GHC-Options:      -Wall
  HS-Source-Dirs:   src

  Build-Depends:    base ==4.*
                  , HStringTemplate ==0.6.*
                  , bytestring ==0.9.*
                  , c10k ==0.2.0
                  , clevercss ==0.1.*
                  , fclabels ==0.9.*
                  , filestore ==0.3.*
                  , hscolour ==1.15.*
                  , monads-fd < 0.2
                  , MonadCatchIO-transformers ==0.2.*
                  , network >= 2.2.1.7 && < 2.3
                  , old-locale ==1.0.*
                  , salvia ==1.2.*
                  , salvia-protocol ==1.1.*
                  , sendfile >=0.6 && < 0.8
                  , split ==0.1.*
                  , stm ==2.1.*
                  , text >= 0.5 && < 0.8
                  , time ==1.1.*
                  , transformers < 0.3
                  , utf8-string ==0.3.*

  Other-Modules:    Util.Terminal
  Exposed-modules:  Network.Salvia.Handler.CleverCSS,
                    Network.Salvia.Handler.CrossDomain
                    Network.Salvia.Handler.ColorLog
                    Network.Salvia.Handler.ExtendedFileSystem,
                    Network.Salvia.Handler.FileStore
                    Network.Salvia.Handler.HsColour
                    Network.Salvia.Handler.SendFile
                    Network.Salvia.Handler.StringTemplate
                    Network.Salvia.Impl.C10k
                    Network.Salvia.Impl.Cgi

